@@ -2,6 +2,7 @@
   * Startup dialog will remember your previously-chosen options
   * Water rendering can be toggled with "T"
   * Camera can be locked onto the Y axis with "L"
+  * Water and fire should render properly regardless of texture pack
 
 Minecraft X-Ray 2.7 Maintenance Branch 7 (2011.01.21)
 
